amun/overlays/prod/amun-api/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: amun-api-route53
spec:
    host: amun.moc.thoth-station.ninja
    to:
        kind: Service
        name: amun-api
    tls:
        caCertificate: ENC[AES256_GCM,data:9sJicu3LXuKkflvnM1QHF0v4ucJm+ar4tkNAlemy12CX4XCpmuC0LwLQA4hlK8xxYX+kJMKc4ScrodBecqTqqt3W9YrSezeJS+y9WnJNw30jUZicIw4r5XoUV2dOpPfGbrsTp0Hp6cSa43xJDBWC1vP2ArTLTWCorxbUDCNCZP9+1OLwovgoT2UaaszXRxczUHgS2EjUwto7IX5ivPMC5/GmeR6uxR0aej5fLB2oLV+E4IK5esHJnPxBL/737APg5XFHOukAwXoH208MHYdhX3JYbH6ML3efLEX7P3Pgo3UvKkf/wGU2/uvzMUxDmGBVkv2nrcKOVtK4OiCqcDvQ+Dj6cDq66+aIX5t9ee5dRGNA6N9QU2iqnz/zFgK4Cpz8d1LxLua+T39qeG1ZVlNNaGwFPGTwy0XY4dstejwzdpjwr7k+NOIMujh/ibAu5OSOEeMReb60e [...]
        certificate: ENC[AES256_GCM,data:NhVClyCWsFBpXxO+13sQBNYIHpRfygRyzJmmcDeTXp/ak9CJbMLzD0cGj7+ECLttjpQdnPnQRnCHLmzdgTl5qImG/q+rsT1Tf7tZ7w0spvtb9w5B2iVR7S2nQGUQZbrosvhK1eEuhU47J29gKmWhH052gcUYElycFqVsTyAca/TU1OHM2r3+Egu3Tbk+LRK8CiftjlU90pej6cMbE2ZIZYdQe0wzMpInpYLTGxT0+TsAF+gBW4vHykwKn4+tSy8G65djHKQHAFOHlJnC5T1qh69s+Ml0p9JZPlUKZILNh2CatnM91QBjHV+MqKLf7dV9kD2ygYAtkiHPej8ccYprq3CiZZJlltFHrMjYnpFbUjSHzdyJDVjB7V2Mde1/3DdyN+nEwx//FwN0uE8K2cabW9XFPFI/rRnvj/CeaLe51HTMZhcp0KJQHDGScsgtz64eH4W6VihLwsN [...]
        key: ENC[AES256_GCM,data:yJYXKcTDfx/LQ1v/t5UqeFn+1N/HrUL6LCi26ExLpulF57oOscMtD4gn36nvoUaQ/6BbmYKPS2dl/mIkiz4MZDtHPxIP0KSALZNlRROdZxQMhAmttCYoZxu0BTWWIhrPgr//57pZAXSWM/qUY5BrKUYM+r3ly0hZ83gimd+jskpRHBex9Nefvsbagqv2x4UiMYlchaEdLhWEEQkpZxLneZLmBt9idkrm2l+8bKj8T1k/ejF1kQLSJjL0BGufzOefv6QvMeoocx1L1ZmEcF3dtOpcMo/W+YUcxxfC5BvdJnCmf151SZ3l42bUwq7UEBlo2P1+XJpnmKQiGdypCYeViB9KJq/Wanr7Q81tBKMKsmo+GFjruBQ5VfeEBIbRxYDjn0To5n/veXaMOfnOwhxQZZIGK/x1YFwoHm7Q1Q4I6CRqLj9kVjY78kEhaPgcTqKZCzwbhVoGuAo8JuCUIdV [...]
        termination: ENC[AES256_GCM,data:g7aDrQ==,iv:RzM+Jr990fPNYWcr4i2+Bn/0b+bKR4SPKbCnbSo41Fo=,tag:84xe2wp6vHwPvPo7tJkbug==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2020-12-13T17:53:56Z'
    mac: ENC[AES256_GCM,data:jgQm+GMLZuSD5oehS53IrsLUQZXw11rmUa0Bw5eNLHZBHYOWzp6CssDEa0PLTS5zATFfikitWMgj0cec1eaKx7YGZwy+4hMtQuqznVLTi1X3ns6rBWCyvByfQH0TklfaZKrH6Cjkh/78Xti7yay/qDS+8ePwlIFX++THfRAKwHg=,iv:W5z/kTUfYBpALvV/2o0kfiHbdSZ16MnZZVySIbTRdjw=,tag:+ZW/EnucfjERhWnUWqeUsg==,type:str]
    pgp:
    -   created_at: '2020-12-13T17:53:55Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYAQ//T9v2praoSqJqI+WL3Ag+E653rEg4+dXVbJVjJ/RQsHbf
[...]
            =vp3h
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2020-12-13T17:53:55Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQf9EjtC+Ub3vOxwaDV9FrlBihX4o1vpBoUemjc2nmJcAYo6
[...]
            BSK9JAvZk2WhRQN75qN5eFWU5g30jUMEF8Jsxpo=
            =QXs/
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2020-12-13T17:53:55Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQgAnWF40If3oOR/ZNuu7O1t94g+YmjB6EHGP+CqmHQLaBb6
[...]
            WOQkr81uHVK3b7n50WlKlyzOmMfzvVSCq0DnKVw=
            =HtI5
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
